--- a/build-tools/build-infra-shadow/build.gradle
+++ b/build-tools/build-infra-shadow/build.gradle
@@ -1,5 +1,3 @@
-import com.diffplug.gradle.spotless.SpotlessTask
-
 /*
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
@@ -37,7 +35,6 @@ static Provider<String> plugin(Provider<PluginDependency> plugin) {
     } else {
       // maven artifact pattern for gradle's plugin repositories.
       return "${it.pluginId}:${it.pluginId}.gradle.plugin:${it.version}".toString()
-      // return "${it.pluginId}:${it.pluginId.replaceFirst(".*\\.", "")}-plugin-gradle:${it.version}".toString()
     }
   }
 }
@@ -47,11 +44,12 @@ dependencies {
   implementation localGroovy()
   implementation deps.commons.codec
   implementation deps.randomizedtesting.runner
+  implementation deps.gjf
+  implementation deps.jgit
 
   implementation plugin(deps.plugins.carrotsearch.buildopts)
   implementation plugin(deps.plugins.carrotsearch.dependencychecks)
   implementation plugin(deps.plugins.forbiddenapis)
-  implementation plugin(deps.plugins.spotless)
 }
 
 tasks.matching {
@@ -69,16 +67,10 @@ tasks.matching {
   enabled = false
 }
 
-// check spotless and other tasks into thinking their sources
-// are from build-infra.
+// make certain tasks think their sources are from build-infra.
 if (!isIdea) {
   plugins.withType(JavaPlugin).configureEach {
     SourceSet main = sourceSets.main
     main.java.srcDirs = rootProject.files("build-tools/build-infra/src/main/java")
-  }
-
-  tasks.withType(SpotlessTask).configureEach {
-    it.projectDir.set(rootProject.file("build-tools/build-infra"))
-    it.target
   }
 }
