--- a/build-tools/build-infra/src/main/groovy/lucene.regenerate.jflex.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.regenerate.jflex.gradle
@@ -53,8 +53,7 @@ configure(project(":lucene:core")) {
 
   def generateStandardTokenizer = wrapWithPersistentChecksums(generateStandardTokenizerInternal, [
     andThenTasks: [
-      "spotlessJava",
-      "spotlessJavaApply"
+      "applyGoogleJavaFormat"
     ],
     mustRunBefore: ["compileJava"]
   ])
@@ -157,8 +156,7 @@ configure(project(":lucene:analysis:common")) {
 
   def generateUAX29URLEmailTokenizer = wrapWithPersistentChecksums(generateUAX29URLEmailTokenizerInternal, [
     andThenTasks: [
-      "spotlessJava",
-      "spotlessJavaApply"
+      "applyGoogleJavaFormat"
     ],
     mustRunBefore: ["compileJava"]
   ])
@@ -213,8 +211,7 @@ configure(project(":lucene:analysis:common")) {
 
   def extraConfig = [
     andThenTasks: [
-      "spotlessJava",
-      "spotlessJavaApply"
+      "applyGoogleJavaFormat"
     ],
     mustRunBefore: ["compileJava"]
   ]
@@ -307,11 +304,12 @@ class JFlexTask extends DefaultTask {
         value: 'SuppressWarnings({"fallthrough","unused"})'
         )
 
-    // Correct line endings for Windows.
-    project.ant.fixcrlf(
+    // Seems like a bug in gjf. https://github.com/google/google-java-format/issues/1260
+    project.ant.replace(
         file: target,
         encoding: "UTF-8",
-        eol: "lf"
+        token: '/* Break so we don\'t hit fall-through warning: */',
+        value: ''
         )
   }
 }
