improve 'javadoc-style-license-header' and 'license-after-package'
these two checks are currently implemented with regex rules looking for
comments, then calling into rat API to check if it is a license. It
means parsing every java file with rat just for this purpose, and the
regexes are not perfect.

The new rules are very simple but find some inconsistencies that weren't
found before: they aren't stricter, the previous code just misses some.

We now only call into rat here for xml files, separately we should
decide if that is worth it. If not, we can reduce the gradle code
further and avoid challenges with Rat API on upgrades.

To me, checking this for the 29 XML files is not worth the hassle of
installing additional C library / configuring `customLanguages` to check
the xml with this tool, I add xml parser in my own personal config but I
think its too much of a hassle for anyone else / CI.

--- a/gradle/validation/ast-grep/rules/java-patterns.yml
+++ b/gradle/validation/ast-grep/rules/java-patterns.yml
@@ -21,3 +21,25 @@ rule:
 severity: error
 message: illegal use of `var` keyword with generic instance creation
 note: add explicit typing on the RHS when using `var`
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/ast-grep/ast-grep/refs/heads/main/schemas/java_rule.json
+id: javadoc-style-license-header
+language: java
+rule:
+  matches: java-license
+  regex: "^/[*][*]"
+severity: error
+message: license should be a non-javadoc block comment
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/ast-grep/ast-grep/refs/heads/main/schemas/java_rule.json
+id: license-after-package
+language: java
+rule:
+  kind: package_declaration
+  precedes:
+    matches: java-license
+ignores:
+  # TODO: something not right with regeneration of this lone file
+  - "**/StandardSyntaxParser.java"
+severity: error
+message: license should be before `package` declaration
