strengthen rule with wildcard node
This allows stuff in between such as import statements, and finds more
inconsistencies: fix them. The TokenManager associated with the
StandardSyntaxParser also has issues here, it has a package statement
and import statement before the license.

This particular parser might be missing from "regenerate"

--- a/gradle/validation/ast-grep/rules/java-patterns.yml
+++ b/gradle/validation/ast-grep/rules/java-patterns.yml
@@ -38,8 +38,11 @@ rule:
   kind: package_declaration
   precedes:
     matches: java-license
+    # allow anything in between (e.g. import statements)
+    stopBy: end
 ignores:
-  # TODO: something not right with regeneration of this lone file
+  # TODO: something not right with regeneration of this lone parser
   - "**/StandardSyntaxParser.java"
+  - "**/StandardSyntaxParserTokenManager.java"
 severity: error
 message: license should be before `package` declaration
