add tests for additional cases now found and fixed

--- a/gradle/validation/ast-grep/tests/java-patterns.yml
+++ b/gradle/validation/ast-grep/tests/java-patterns.yml
@@ -29,6 +29,14 @@ invalid:
   - |
     package foo;
     /* BLAH BLAH Unless required by applicable law BLAH BLAH */
+  - |
+    package foo;
+    import bar;
+    /* BLAH BLAH Unless required by applicable law BLAH BLAH */
+  - |
+    /* BLAH BLAH Unless required by applicable law BLAH BLAH */
+    package foo;
+    /* BLAH BLAH Unless required by applicable law BLAH BLAH */
 valid:
   - |
     /* BLAH BLAH Unless required by applicable law BLAH BLAH */
