--- a/gradle/validation/ast-grep/tests/java-patterns.yml
+++ b/gradle/validation/ast-grep/tests/java-patterns.yml
@@ -13,3 +13,31 @@ invalid:
 valid:
   - HashSet<String> x = new HashSet<>();
   - var list = new ArrayList<String>();
+---
+id: javadoc-style-license-header
+invalid:
+  - |
+    /** BLAH BLAH Unless required by applicable law BLAH BLAH */
+valid:
+  - |
+    /* BLAH BLAH Unless required by applicable law BLAH BLAH */
+  - |
+    /** something else */
+---
+id: license-after-package
+invalid:
+  - |
+    package foo;
+    /* BLAH BLAH Unless required by applicable law BLAH BLAH */
+  - |
+    package foo;
+    import bar;
+    /* BLAH BLAH Unless required by applicable law BLAH BLAH */
+  - |
+    /* BLAH BLAH Unless required by applicable law BLAH BLAH */
+    package foo;
+    /* BLAH BLAH Unless required by applicable law BLAH BLAH */
+valid:
+  - |
+    /* BLAH BLAH Unless required by applicable law BLAH BLAH */
+    package foo;
