--- a/gradle/validation/ast-grep/tests/java-patterns.yml
+++ b/gradle/validation/ast-grep/tests/java-patterns.yml
@@ -41,3 +41,32 @@ valid:
   - |
     /* BLAH BLAH Unless required by applicable law BLAH BLAH */
     package foo;
+---
+id: javadoc-author-tag
+invalid:
+  - |
+    /** @author foo */
+valid:
+  - |
+    // notjavadoc @author
+  - |
+    /* notjavadoc @author */
+---
+id: nocommit-comment
+invalid:
+  - |
+    // nocommit: fix this
+  - |
+    /* nocommit: fix this */
+valid:
+  - boolean nocommit = false;
+---
+id: tood-comment
+invalid:
+  - |
+    // TOOD: fix this
+  - |
+    /* TOOD: fix this */
+valid:
+  - |
+    var foo = "TOOD: whatever";
