--- a/build-tools/build-infra/src/main/groovy/lucene.ide.eclipse.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.ide.eclipse.gradle
@@ -42,14 +42,28 @@ if (gradle.startParameter.taskNames.contains("eclipse")) {
     classpath {
       defaultOutputDir = file('build/eclipse')
 
-      file {
-        beforeMerged { classpath ->
-          classpath.entries.removeAll {
-            it.kind == "src"
-          }
-        }
+      downloadSources = true
+      downloadJavadoc = false
 
+      plusConfigurations += allprojects.findAll{ prj ->
+        return prj.plugins.hasPlugin(JavaPlugin)
+      }.collectMany {
+        return [ it.configurations.compileClasspath, it.configurations.testCompileClasspath ]
+      }
+
+      file {
         whenMerged { classpath ->
+          classpath.entries.removeAll {
+            return it.kind == "src" || (it.kind == "lib" && it.getPath() ==~ /(.+)lucene-.*\.jar/)
+          }
+
+          // I'm not sure what these attributes are supposed to do. Keeping the previous version of having no-attributes.
+          classpath.entries.each {
+            if (it.kind == "lib") {
+              it.getEntryAttributes().clear()
+            }
+          }
+
           def projects = allprojects.findAll { prj ->
             return prj.plugins.hasPlugin(JavaPlugin)
           }
@@ -62,7 +76,6 @@ if (gradle.startParameter.taskNames.contains("eclipse")) {
             'tools'
           ] as Set
           Set<String> sources = []
-          Set<File> jars = []
           projects.each { prj ->
             prj.sourceSets.each { sourceSet ->
               if (sourceSetNames.contains(sourceSet.name)) {
@@ -70,22 +83,12 @@ if (gradle.startParameter.taskNames.contains("eclipse")) {
                 sources += sourceSet.resources.srcDirs.findAll { dir -> dir.exists() }.collect { dir -> relativize(dir) }
               }
             }
-
-            // This is hacky - we take the resolved compile classpath and just
-            // include JAR files from there. We should probably make it smarter
-            // by looking at real dependencies. But then: this Eclipse configuration
-            // doesn't really separate sources anyway so why bother.
-            jars += prj.configurations.compileClasspath.resolve()
-            jars += prj.configurations.testCompileClasspath.resolve()
           }
 
           classpath.entries += sources.sort().collect { name ->
             def sourceFolder = new SourceFolder(name, "build/eclipse/" + name)
             sourceFolder.setExcludes(["module-info.java"])
             return sourceFolder
-          }
-          classpath.entries += jars.unique().findAll { location -> location.isFile() && !(location.name ==~ /lucene-.*\.jar/) }.collect { location ->
-            new LibEntry(location.toString())
           }
         }
       }
@@ -132,23 +135,3 @@ if (gradle.startParameter.taskNames.contains("eclipse")) {
   }
 }
 
-public class LibEntry implements ClasspathEntry {
-  private String path;
-
-  LibEntry(String path) {
-    this.path = path;
-  }
-
-  @Override
-  String getKind() {
-    return "lib"
-  }
-
-  @Override
-  void appendNode(Node node) {
-    node.appendNode("classpathentry", Map.of(
-        "kind", "lib",
-        "path", path
-        ))
-  }
-}
